--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_graph.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_graph.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,7 +12,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_graph"
-    tools:context="com.example.grant.bluetooth_elicited_brain_stimulation.RecordReadingActivity">
+    tools:context="com.example.grant.bluetooth_elicited_brain_stimulation.RecordReadingActivity"
+    android:orientation="vertical">
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -20,19 +21,14 @@
         android:id="@+id/start_recording_button"
         android:src="@mipmap/start_recording_button"
         android:contentDescription="@string/start_recording_accessibility"
-        android:background="@null"
-        android:layout_above="@+id/new_recording_status_text"
-        android:layout_centerHorizontal="true" />
+        android:background="@null" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/new_recording_status_text_string"
-        android:id="@+id/new_recording_status_text"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="48dp" />
+        android:id="@+id/new_recording_status_text"/>
 
 
-</RelativeLayout>
+</LinearLayout>
