--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_new_recording.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/content_new_recording.xml
@@ -52,6 +52,7 @@
             android:background="@drawable/rounded_button"/>
 
         <ListView
+            android:choiceMode="multipleChoice"
             android:id="@+id/channelList"
             android:layout_above="@id/tempButt"
             android:layout_width="wrap_content"
