--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_register.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_register.xml
@@ -3,9 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
             android:fitsSystemWindows="true">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <!-- Header -->
         <!-- Footer -->
@@ -19,69 +16,88 @@
             android:paddingTop="56dp"
             android:paddingLeft="24dp"
             android:paddingRight="24dp">
-            <!-- Full Name Label -->
-            <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="First Name"/>
-            <EditText android:id="@+id/reg_firstname"
+
+            <!-- Logo -->
+            <ImageView android:src="@mipmap/brain_icon_flat"
+                       android:layout_width="wrap_content"
+                       android:layout_height="72dp"
+                       android:layout_marginBottom="10dp"
+                       android:layout_gravity="center_horizontal" />
+
+
+            <!-- First Name Label -->
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dip"
-                android:singleLine="true"
-                android:layout_marginBottom="20dip"
-                      android:inputType="textCapWords|textPersonName"/>
-            <TextView
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+                <EditText android:id="@+id/reg_firstname"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:inputType="textCapWords|textPersonName"
+                          android:hint="First Name" />
+            </android.support.design.widget.TextInputLayout>
+
+            <!-- Last Name Label -->
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Last Name"/>
-            <EditText android:id="@+id/reg_lastname"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dip"
-                android:singleLine="true"
-                android:layout_marginBottom="20dip"
-                      android:inputType="textCapWords|textPersonName"/>
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+                <EditText android:id="@+id/reg_lastname"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:inputType="textCapWords|textPersonName"
+                          android:hint="Last Name" />
+            </android.support.design.widget.TextInputLayout>
+
             <!-- Email Label -->
-            <TextView
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Email"/>
-            <EditText android:id="@+id/reg_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dip"
-                android:singleLine="true"
-                android:layout_marginBottom="20dip"
-                android:inputType="textEmailAddress"/>
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+                <EditText android:id="@+id/reg_email"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:inputType="textEmailAddress"
+                          android:hint="Email" />
+            </android.support.design.widget.TextInputLayout>
+
             <!-- Password Label -->
-            <TextView
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Password"/>
-            <EditText android:id="@+id/reg_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:singleLine="true"
-                android:layout_marginTop="5dip"/>
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+                <EditText android:id="@+id/reg_password"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:inputType="textPassword"
+                          android:hint="Password"/>
+            </android.support.design.widget.TextInputLayout>
+
             <!-- Register Button -->
-            <Button android:id="@+id/btnRegister"
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btnRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dip"
-                android:text="Register New Account"/>
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:padding="12dp"
+                android:text="Create Account"/>
+
+            <!-- Link to Login Screen -->
             <TextView android:id="@+id/link_to_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dip"
-                android:layout_marginBottom="40dip"
-                android:text="Login Here if Account Already Exists"
-                android:layout_gravity="center"
-                android:textSize="20sp"/>
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginBottom="24dp"
+                      android:text="Already a member? Log in"
+                      android:textStyle="italic"
+                      android:gravity="center"
+                      android:textSize="16sp"/>
 
         </LinearLayout>
         <!-- Registration Form Ends -->
-    </RelativeLayout>
 
 </ScrollView>
