--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/colors.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- App theme: Base App-->
     <color name="colorDarkGreen">#599B4E</color>
     <color name="colorLightGreen">#00C853</color><!--or #71BF66-->
     <color name="colorDarkGray">#463F3F</color>
@@ -9,6 +10,7 @@
     <color name="white">#FFF</color>
     <color name="black">#000</color>
     <color name="bg">#F7F7FF</color>
+    <color name="accentApp">#FF4081</color>
 
     <!--Dashboard colors-->
     <color name="g1">#4DD0E1</color>
