--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/fragment_profile.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/fragment_profile.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="-50dp"
-            android:src="@drawable/profileface"
+            android:src="@drawable/edit_patient"
             />
     </TableRow>
     <TableRow>
