--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/row_profile_list.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/row_profile_list.xml
@@ -10,6 +10,9 @@
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                  android:textStyle="bold"
+                  android:textSize="18sp"
+                  android:paddingTop="25dp"
                   android:gravity="center_vertical"
                   android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                   android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
@@ -18,6 +21,8 @@
                   android:id="@+id/firstName"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
+                  android:textSize="16sp"
+                  android:paddingTop="8dp"
                   android:textAppearance="?android:attr/textAppearanceListItemSmall"
                   android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                   android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
@@ -28,6 +33,6 @@
             android:layout_height="fill_parent"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:src="@drawable/profileface" />
+            android:src="@drawable/patient_icon" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
