--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_register.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_register.xml
@@ -77,6 +77,19 @@
                           android:hint="Password"/>
             </android.support.design.widget.TextInputLayout>
 
+            <!-- Passsword Confirmation -->
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+                <EditText android:id="@+id/reg_password_confirm"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:hint="Confirm Password"/>
+            </android.support.design.widget.TextInputLayout>
+
             <!-- Register Button -->
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btnRegister"
