--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_clinician_settings.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_clinician_settings.xml
@@ -1,51 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_margin="10dp"
+              android:padding="20dp"
+              android:orientation="vertical"
     >
-    <TableRow>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/clinician_settings_icon"
+        android:layout_marginBottom="20dp"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="First Name: "
+            android:paddingRight="10dp"/>
         <EditText android:id="@+id/clinician_settings_fName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
             />
-    </TableRow>
-    <TableRow>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Last Name: "
+            android:paddingRight="10dp"/>
         <EditText android:id="@+id/clinician_settings_lName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
             />
-    </TableRow>
-    <TableRow>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Email: "
+            android:paddingRight="10dp"/>
         <EditText android:id="@+id/clinician_settings_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:inputType="textEmailAddress"
             />
-    </TableRow>
-    <TableRow>
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Password: "
+            android:paddingRight="10dp"/>
         <EditText android:id="@+id/clinician_settings_passwords"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:inputType="textPassword"
             />
-    </TableRow>
-    <TableRow>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
         <Button
-            android:id="@+id/save_clinician_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Save Clinician"
-            />
-    </TableRow>
-    <TableRow>
+        android:id="@+id/save_clinician_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Save"
+        android:textColor="@color/white"
+        />
+
+
         <Button
             android:id="@+id/delete_clinician_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Delete"
+            android:textColor="@color/white"
             />
-    </TableRow>
-</TableLayout>
+    </LinearLayout>
+
+
+
+
+</LinearLayout>
