--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_new_patient.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/layout/activity_new_patient.xml
@@ -3,13 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#fff">
 
-        <!-- Header -->
-        <!-- Footer -->
 
         <!-- Patient Registration Form -->
         <LinearLayout
@@ -17,74 +11,82 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dip">
-            <!-- Full Name Label -->
-            <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#372c24"
-            android:text="First Name"/>
-            <EditText android:id="@+id/reg_firstname_patient"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dip"
-                android:singleLine="true"
-                android:layout_marginBottom="20dip"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#372c24"
-                android:text="Last Name"/>
-            <EditText android:id="@+id/reg_lastname_patient"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dip"
-                android:singleLine="true"
-                android:layout_marginBottom="20dip"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#372c24"
-                android:text="Address"/>
-            <EditText android:id="@+id/reg_address_patient"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dip"
-                android:singleLine="true"
-                android:layout_marginBottom="20dip"/>
-            <!-- Email Label -->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#372c24"
-                android:text="Email"/>
-            <EditText android:id="@+id/reg_email_patient"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dip"
-                android:singleLine="true"
-                android:layout_marginBottom="20dip"
-                android:inputType="textEmailAddress"/>
+            android:padding="10dp">
 
-            <TextView
+            <!-- icon -->
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#372c24"
-                android:text="Ethnicity"/>
-            <EditText android:id="@+id/reg_ethnicity_patient"
+                android:src="@drawable/register_user_icon"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"/>
+
+            <!-- Full Name Label -->
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dip"
-                android:singleLine="true"
-                android:layout_marginBottom="20dip"/>
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+                <EditText android:id="@+id/reg_firstname_patient"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:hint="First Name"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+                <EditText android:id="@+id/reg_lastname_patient"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:hint="Last Name"
+                          />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+                <EditText android:id="@+id/reg_address_patient"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                            android:hint="Address"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+                <EditText android:id="@+id/reg_email_patient"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:hint="Email"
+                          android:inputType="textEmailAddress"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+                <EditText android:id="@+id/reg_ethnicity_patient"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:hint="Ethnicity"/>
+            </android.support.design.widget.TextInputLayout>
+
             <!-- Register Button -->
             <Button android:id="@+id/btnRegister_patient"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dip"
+                    android:textColor="@color/white"
+                android:layout_marginTop="10dp"
                 android:text="Register New Patient"/>
         </LinearLayout>
         <!-- Registration Form Ends -->
-    </RelativeLayout>
 
 </ScrollView>
